--- a/front-end/FX.html
+++ b/front-end/FX.html
@@ -44,10 +44,7 @@
     
 </div>
 
-<p><input id="b1" type="submit"></p>
-
-
-<!-- <button class = "btn btn-dark" id='b1'>confirm</button> -->
+ <button class = "btn btn-dark" id='b1' onclick="confirm()">confirm</button>
 
 
 </body>
