Change currency format and ensure all are in uppercase

--- a/front-end/FX.html
+++ b/front-end/FX.html
@@ -22,7 +22,7 @@
         <label for="ticker"><strong> =========>      To (Currency)</strong></label>
         <input type="text" id="base" name="ticker" placeholder="eg.SGD/EUR/USD/GBP"><br><br>
 
-        <label for="Value"><strong>Amoun</strong>t </label><br>
+        <label for="Value"><strong>Amount</strong> </label><br>
         <input type="int" id="Value" name="Amount" placeholder="Amount"><br><br>
 
         <label for="Date"><strong>Transaction Date:</strong></label><br>
