--- a/front-end/FX.html
+++ b/front-end/FX.html
@@ -12,6 +12,8 @@
     <h1>NUS Money - Currency </h1>
 </head>
 <body>
+
+    <div class = 'balance'></div>
 <div>
     
     <form id="myform">
@@ -54,4 +56,5 @@
 
 </body>
 <script src="FX.js"></script>
+<script src="getuser.js"></script>
 </html>
