--- a/front-end/FX.html
+++ b/front-end/FX.html
@@ -33,7 +33,7 @@
      
 
       </form>
-      <br><button class="btn btn-outline-primary" onclick="getInputValue();">Submit</button>
+      <br><button class="btn btn-outline-primary" onclick="getInputValue();">Get FX Quote</button>
       <button class = "btn btn-dark" onclick="refresh()">Refresh</button>
       
       <h1 id="symbol"></h1>
