--- a/front-end/login.html
+++ b/front-end/login.html
@@ -1,29 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>NUS Money Login</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>      <!-- jquery source -->
-</head>
-<body>
-    <div class='login-form'>
-        <h1>NUS Money</h1>
-        
-        <h2>Log In</h2>
-            <form action="/login" method="POST">
-                <input type="text" name="email" placeholder="email@email.com" required>
-                <br>
-                <input type="password" name="password" placeholder="password" required>
-                <br>
-                <input type="submit" value="Log In">
-
-            </form>
-
-    </div>
-
-</body>
-
+  <head>
+	<title>NUS Money</title>
+  </head>
+  <body>
+    <h1>NUS Money</h1>
+    <h2>Log In</h2>
+	<form action="/auth" method="post">
+  	<!-- user input-->
+  	Email:<br>
+  	<input type="text" name="email" placeholder="email" required><br><br>
+  	Password:<br>
+  	<input type="password" name="password" placeholder="Password" required><br><br>
+  	<!-- submit button -->
+  	<input type="submit" value="Log In">
+	</form>
+  </body>
 </html>
