testing of loggedin email retrieving

--- a/front-end/hometesting.html
+++ b/front-end/hometesting.html
@@ -5,8 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Home Test</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    
-    <script src='main.js'></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>      <!-- jquery source -->
 </head>
 <body>
     
@@ -21,5 +20,5 @@
 
 
 </body>
-<script src="home.js"></script>
+<script src="hometesting.js"></script>
 </html>
