add balance and link to hometesting page

--- a/front-end/hometesting.html
+++ b/front-end/hometesting.html
@@ -10,15 +10,18 @@
 <body>
     
     <p> 
-        testing
+        Welcome 
     </p>
 
     <p id="test">
 
 
-    </p>
-
-
+    </p>  
+    <div class = 'balance'></div>
+    
+     <div class = 'link'>
+        <a href="FX.html">Conversion</a> | <a href="withdrawal.html">Withdrawal</a> | <a href="deposit.html">Deposit</a>
+     </div>
 </body>
 <script src="hometesting.js"></script>
 </html>
