updated to retrieve user's user_id, modified all transactions' postDataJSON to dynamic user_id globalvar
added Back button for pages

--- a/front-end/deposit.html
+++ b/front-end/deposit.html
@@ -31,4 +31,8 @@
 
 </body>
 <script src="deposit.js"></script>
+<footer>
+    <br>
+    <button class ="btn btn-dark" id='back-btn' onclick="goBack()">Back to Dashboard</button>
+</footer>
 </html>
