--- a/front-end/hometesting.html
+++ b/front-end/hometesting.html
@@ -8,15 +8,12 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>      <!-- jquery source -->
 </head>
 <body>
+    <h1>NUS Money</h1>
+    <h2>Dashboard</h2>
     
-    <p> 
-        Welcome 
-    </p>
+    Welcome,
+    <p id="user"> </p>  
 
-    <p id="test">
-
-
-    </p>  
     <div class = 'balance'></div>
     
      <div class = 'link'>
