updated to retrieve user's user_id, modified all transactions' postDataJSON to dynamic user_id globalvar
added Back button for pages

--- a/front-end/FX.html
+++ b/front-end/FX.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="FX.css" />
     
     <title>Currency</title>
-    <h1>NUS Money - Currency </h1>
+    <h1>NUS Money - Currency Conversion </h1>
 </head>
 <body>
 
@@ -53,4 +53,8 @@
 </body>
 <script src="FX.js"></script>
 <script src="getuser.js"></script>
+<footer>
+    <br>
+    <button class ="btn btn-dark" id='back-btn' onclick="goBack()">Back to Dashboard</button>
+</footer>
 </html>
