added signup page & logout function

--- a/public/home.html
+++ b/public/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Home Test</title>
+    <title>NUS Money: Dashboard</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>      <!-- jquery source -->
     <link rel="stylesheet" href="FX.css" />
@@ -22,9 +22,13 @@
 
      <div class = 'link'>
          <p id='link-header'><h3>Navigation</h3></p>
-        <a href="deposit.html">Deposit</a>  |    <a href="withdrawal.html">Withdrawal</a>   |   <a href="FX.html">Conversion</a> 
+        <a href="deposit.html">Deposit</a>  |   <a href="withdrawal.html">Withdrawal</a>   |   <a href="FX.html">Conversion</a> 
      </div>
     
+     <br><br><br>
+     <div class='logout'>
+         <button id='logout' onClick="logOut()">Log Out</button>
+     </div>
      
 </body>
 <script src="home.js"></script>
