--- a/public/login.html
+++ b/public/login.html
@@ -16,5 +16,8 @@
   	<!-- submit button -->
   	<input type="submit" value="Log In">
 	</form>
+	<br>
+	<br>
+	<button id='register' onClick="window.location.href='/public/register.html';">Register</button>
   </body>
 </html>
