Update transaction display and balance and css

--- a/public/FX.html
+++ b/public/FX.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="FX.css" />
     
     <title>Currency</title>
-    <h1>NUS Money - Currency Conversion </h1>
+    <h1>Currency Conversion </h1>
+    <p class = 'link'></p>
 </head>
 <body>
 
