--- a/public/withdrawal.html
+++ b/public/withdrawal.html
@@ -11,8 +11,10 @@
     
     <title>Withdrawal</title>
     <h1>Withdrawal</h1>
+    <p class = 'link'></p>
 </head>
 <body>
+    <div class = 'balance'></div>
 <div>
     <h1 id="symbol"></h1>
     <form id="myform">
@@ -32,6 +34,7 @@
 
 </body>
 <script src="withdrawal.js"></script>
+<script src="getuser.js"></script>
 <footer>
     <br>
     <button class ="btn btn-dark" id='back-btn' onclick="goBack()">Back to Dashboard</button>
