Update transaction display and css

--- a/public/login.html
+++ b/public/login.html
@@ -14,7 +14,7 @@
   	Password:<br>
   	<input type="password" name="password" placeholder="Password" required><br><br>
   	<!-- submit button -->
-  	<input type="submit" value="Log In">
+  	<button type="submit" value="Log In">Log In</button>
 	</form>
 	<br>
 	<br>
