--- a/public/FX.html
+++ b/public/FX.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="FX.css" />
     
     <title>Currency</title>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <h1>Currency Conversion </h1>
     <p class = 'link'></p>
 </head>
