--- a/public/deposit.html
+++ b/public/deposit.html
@@ -10,6 +10,7 @@
 
     
     <title>Deposit</title>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <h1>Deposit</h1>
     <p class = 'link'></p>
     
