--- a/public/home.html
+++ b/public/home.html
@@ -4,6 +4,7 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>NUS Money: Dashboard</title>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>      <!-- jquery source -->
     <link rel="stylesheet" href="FX.css" />
