--- a/public/login.html
+++ b/public/login.html
@@ -2,11 +2,12 @@
 <html>
   <head>
 	<title>NUS Money</title>
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 	<link rel="stylesheet" href="FX.css" />
   </head>
   <body>
-    <h1>NUS Money</h1>
-    <h2>Log In</h2>
+	<h1>NUS Money</h1>
+	<h2>Log In</h2>
 	<form action="/auth" method="post">
   	<!-- user input-->
   	Email:<br>
@@ -18,6 +19,8 @@
 	</form>
 	<br>
 	<br>
-	<button id='register' onClick="window.location.href='/public/register.html';">Register</button>
+	<button id='register' onClick="window.location.href='/public/register.html';">Register</button><br><br>
+
+	
   </body>
 </html>
