--- a/public/register.html
+++ b/public/register.html
@@ -2,6 +2,7 @@
 <html>
   <head>
 	<title>NUS Money</title>
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 	<link rel="stylesheet" href="FX.css" />
   </head>
   <body>
