--- a/public/register_success.html
+++ b/public/register_success.html
@@ -2,6 +2,7 @@
 <html>
   <head>
 	<title>NUS Money</title>
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
 	<h1>NUS Money</h1>
