--- a/public/withdrawal.html
+++ b/public/withdrawal.html
@@ -10,6 +10,7 @@
 
     
     <title>Withdrawal</title>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <h1>Withdrawal</h1>
     <p class = 'link'></p>
 </head>
