renamed .css file and update ref in html

--- a/public/login.html
+++ b/public/login.html
@@ -3,7 +3,7 @@
   <head>
 	<title>NUS Money</title>
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-	<link rel="stylesheet" href="FX.css" />
+	<link rel="stylesheet" href="style.css" />
   </head>
   <body>
 	<h1>NUS Money</h1>
