--- a/public/FX.html
+++ b/public/FX.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>      <!-- jquery source -->
-    <link rel="stylesheet" href="FX.css" />
+    <link rel="stylesheet" href="style.css" />
     
     <title>Currency</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
