--- a/public/home.html
+++ b/public/home.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>      <!-- jquery source -->
-    <link rel="stylesheet" href="FX.css" />
+    <link rel="stylesheet" href="style.css" />
     
 </head>
 <body>
